# LiarsDice

./: .gitignore  cpuTester.py  liar's dice.py  liarsDice.py  pyproject.toml  readme.txt  setup.py  todos.txt
.github/workflows/: cd.yml  ci.yml
LiarsDice/: LiarsDice.py  liarsDice.py  mPyLiarsDice.py
testing/: cpuTester.py
