[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[project]
name = "liarsDice"
version = "0.6.3"
description = "A Liar's Dice game"
authors = [
    {name = "Yusuf739"}
]
license = {text = "Creative Commons Attribution-Noncommercial-Share Alike license"}
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
liarsdice = "LiarsDice.liarsDice:main"