[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.setuptools]
packages = ["LiarsDice"]

[project]
name = "liarsDice"
version = "0.6.3"
description = "Simple Liar's Dice game. Inspired by RDR1 minigame"
authors = [
    {name = "YusufA442", email = "yusuf265820@gmail.com"}
]
dependencies = []
license = {text = "Creative Commons Attribution-Noncommercial-Share Alike license"}
readme = "readme.txt"
requires-python = ">=3.6"
urls = {Homepage = "https://github.com/YusufA442/liarsDice"}

[project.scripts]
liarsdice = "LiarsDice.liarsDice:run"